fix order, add invoice facade and report